--- a/produit1.html
+++ b/produit1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sac</title>
 </head>
 <body>
@@ -12,11 +13,12 @@
         </center>
         <br>
         <hr>
-        <ul>
-            <li><a href="./index.html">Accueil</a></li>
-            <li><a href="./produit.html">Vetement</a></li>
-            <li><a href="./produit2.html">Accessoire</a></li>
-          </ul>
+        <ul id="nav">
+            
+          <li><a href="./produit.html">Vetement</a></li>
+          <li><a href="./produit2.html">Accessoire</a></li>
+          <li><a href="./index.html">Acceuil</a></li>
+        </ul>
           <hr>
         <center>
         <table>
